--- a/src/main/resources/config/activemq.properties
+++ b/src/main/resources/config/activemq.properties
@@ -2,7 +2,7 @@
 queueName=test
 #brokerURL
 #brokerURL=failover:(tcp://192.168.100.4:15102,tcp://192.168.100.5:15104,tcp://192.168.100.6:15107)?jms.prefetchPolicy.all=50
-brokerURL=failover:(tcp://127.0.0.1:61616)?jms.prefetchPolicy.all=50
+brokerURL=failover:(tcp://127.0.0.1:61616,tcp://127.0.0.1:61617)?jms.prefetchPolicy.all=50
 #,tcp://192.168.0.107:61617
 #queue username
 mq.username=admin
