--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,27 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-  
-  <!-- Log4J Start -->
-  <context-param>
-    <param-name>log4jExposeWebAppRoot</param-name>
-    <param-value>false</param-value>
-  </context-param>
-  <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>classpath:log4j.xml</param-value>
-  </context-param>
-  <context-param>
-    <param-name>log4jRefreshInterval</param-name>
-    <param-value>6000</param-value>
-  </context-param>
-  <!-- Spring Log4J config -->
-  <listener>
-    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
-  <!-- Log4J End -->
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0" metadata-complete="false">
   <!-- Spring 编码过滤器 start -->
   <filter>
     <filter-name>characterEncoding</filter-name>
@@ -40,6 +21,25 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <!-- Spring 编码过滤器 End -->
+  <!-- Log4J Start -->
+  <context-param>
+    <param-name>log4jExposeWebAppRoot</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j.xml</param-value>
+  </context-param>
+  <context-param>
+    <param-name>log4jRefreshInterval</param-name>
+    <param-value>6000</param-value>
+  </context-param>
+  <!-- Spring Log4J config -->
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+  <!-- Log4J End -->
+  
   
   <context-param>
     <param-name>contextConfigLocation</param-name>
